# clion_template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dbg.h  main.cpp
